# marketdata-toolkit

./: .gitignore  README.md  install.bat  pyproject.toml
config/: static_extras.json.example  tickers.json.example
marketdata/: __init__.py  prices.py
tests/: test_cli.py  test_prices.py  test_watchlist.py
watchlist/: __init__.py  update_watchlist.py
